--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="crime_solved_label">Solved</string>
 
     <string name="new_crime">New Crime</string>
+    <string name="there_are_no_crime">There are no crime</string>
+    <string name="add_crime">Add Crime</string>
 </resources>
