添加选择嫌疑人和发送短信按钮

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,7 @@
     <string name="new_crime">New Crime</string>
     <string name="there_are_no_crime">There are no crime</string>
     <string name="add_crime">Add Crime</string>
+
+    <string name="crime_suspect_text">Choose Suspect</string>
+    <string name="crime_report_text">Send Crime Report</string>
 </resources>
